--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   cloud_firestore: ^6.0.1
   firebase_core: ^4.1.0
   firebase_auth: ^6.0.2
+  firebase_storage: ^13.0.1
+  image_picker: ^1.0.7
   fluttertoast: ^8.2.12
   url_launcher: ^6.2.5
 
