--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   image_picker: ^1.0.7
   fluttertoast: ^8.2.12
   url_launcher: ^6.2.5
+  flutter_local_notifications: ^17.2.3
+  timezone: ^0.9.4
+  firebase_messaging: ^16.0.1
 
 dev_dependencies:
   flutter_test:
