--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.4.1 <4.0.0'
@@ -59,6 +59,9 @@ dependencies:
   flutter_local_notifications: ^17.2.3
   timezone: ^0.9.4
   firebase_messaging: ^16.0.1
+  firebase_analytics: ^12.0.1
+  http: ^1.1.0
+  google_mobile_ads: ^6.0.0
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +74,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   build_runner: ^2.4.15
+  flutter_launcher_icons: ^0.14.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -113,3 +117,22 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
+
+# アプリアイコン生成設定
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.jpg"
+  min_sdk_android: 23
+  web:
+    generate: true
+    image_path: "assets/images/icon.jpg"
+    background_color: "#87CEEB"
+    theme_color: "#2F4F4F"
+  windows:
+    generate: true
+    image_path: "assets/images/icon.jpg"
+    icon_size: 48
+  macos:
+    generate: true
+    image_path: "assets/images/icon.jpg"
