--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,11 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+      # Enable Crashlytics for iOS
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        'CRASHLYTICS_ENABLED=1',
+      ]
     end
   end
 end
