--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   timezone: ^0.9.4
   firebase_messaging: ^16.0.1
   firebase_analytics: ^12.0.1
+  firebase_crashlytics: ^5.0.1
   http: ^1.1.0
   google_mobile_ads: ^6.0.0
   device_info_plus: ^10.1.2
