Fix YAML indentation in codemagic.yml

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -5,6 +5,6 @@ workflows:
       flutter: 3.27.3
       xcode: 16.2
     scripts:
-      - flutter build ios --simulator --flavor staging # --flavor is optional
+      - flutter build ios --simulator
     artifacts:
       - build/ios/iphonesimulator/Runner.app
