iosクラッシュ問題を解消

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -61,5 +61,7 @@
 	<string>このアプリは写真を撮影するためにカメラの許可が必要です。</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>このアプリは写真を選択するためにフォトライブラリの許可が必要です。</string>
+	<key>GADApplicationIdentifier</key>
+	<string>ca-app-pub-6529629959594411~1234567890</string>
 </dict>
 </plist>
