--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dependencies:
   google_mobile_ads: ^6.0.0
   device_info_plus: ^10.1.2
   package_info_plus: ^8.0.2
+  cached_network_image: ^3.3.1
+  flutter_image_compress: ^2.3.0
+  extended_image: ^8.0.0
 
 dev_dependencies:
   flutter_test:
