--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,10 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  
+  # Firebase Crashlytics
+  pod 'Firebase/Crashlytics'
+  
   target 'RunnerTests' do
     inherit! :search_paths
   end
